# ray-serve-cai

./: .env.example  .git_sync.py  .gitignore  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  CHANGES_SUMMARY.md  EXTRACTION_PLAN.md  LAUNCH_MODEL_GUIDE.md  NGINX_INSTALLATION.md  NGINX_PROXY_DESIGN.md  QUICK_REFERENCE.md  QUICK_START_NGINX.md  README.md  pyproject.toml  ray_cluster_config.yaml
.docs_archive/: DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  FIXES_APPLIED.md  SCRIPT_PATH_UPDATE.md  SESSION_COMPLETION_STATUS.md  SESSION_FIXES_INDEX.md  VERIFICATION_REPORT.md
.github/workflows/: deploy-ray-cluster.yml
cai_integration/: README.md  TROUBLESHOOTING.md  create_jobs.py  deploy_to_cml.py  jobs_config.yaml  launch_ray_cluster.py  launch_ray_cluster.sh  launch_ray_cluster_job.py  quick_start.sh  setup_environment.py  setup_project.py  test_cluster.sh  test_cluster_deployment_job.py  trigger_jobs.py
docs/: ARCHITECTURE.md  CLUSTER_SETUP.md  DEPLOYMENT_ARCHITECTURE.md  INDEX.md  NGINX_INSTALLATION.md  NGINX_PROXY_DESIGN.md  QUICK_START_NGINX.md  REVIEW_NAVIGATION.md  STRUCTURE_REVIEW.md  cai_cluster_guide.md
examples/: cai_cluster_config.yaml  cai_cluster_example.py  deploy_and_query_model.py
ray_serve_cai/: __init__.py  cai_cluster.py  launch_cluster.py  ray_backend.py
ray_serve_cai/configs/: nginx.conf.template
ray_serve_cai/engines/: __init__.py  base.py  registry.py  sglang_config.py  sglang_engine.py  vllm_config.py  vllm_engine.py
ray_serve_cai/management/: README.md  __init__.py  app.py
ray_serve_cai/management/api/: __init__.py  applications.py  cluster.py  resources.py
ray_serve_cai/management/models/: __init__.py  requests.py  responses.py
ray_serve_cai/management/services/: __init__.py  cai_service.py  coordinator.py  ray_service.py
ray_serve_cai/scripts/: start_nginx.py
ray_serve_cai/static/: index.html
scripts/: deploy_qwen2_model.py  deploy_qwen3_model.py  launch_ray_cluster.sh  test_cluster.sh
tests/: README.md  TESTING_GUIDE.md  run_test.sh  test_cluster_deployment.py  test_e2e_deployment.py
